--- a/frm.html
+++ b/frm.html
@@ -30,7 +30,7 @@
 
     <script>
       setTimeout(function () {
-        window.location.href = window.location.origin + "/depbanhmi";
+        window.location.href = window.location.origin + "/depbanhmi.html";
       }, 5000);
     </script>
   </body>
